# nidex

./: .gitignore  NOTES.md  README.md
codex-rs/: .gitignore  AGENTS.md  Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/src/: jsonrpc_lite.rs
codex-rs/app-server-test-client/src/: main.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  lib.rs  message_processor.rs  models.rs  outgoing_message.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: login.rs  main.rs  mcp_cmd.rs
codex-rs/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/code-nav/: Cargo.toml
codex-rs/code-nav/migrations/: 0001_symbols_index.sql
codex-rs/code-nav/src/: index.rs  language.rs  lib.rs  main.rs  query.rs  symbols.rs
codex-rs/codex-api/src/: dsml_parser.rs  lib.rs
codex-rs/codex-api/tests/: models_integration.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: default_client.rs  transport.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: oss.rs
codex-rs/core/: Cargo.toml  aidex_prompt.md  code_nav_prompt.md  codex_prompt.md  config.schema.json  gemma-4_prompt.md  models.json
codex-rs/core/src/: analytics_client.rs  api_bridge.rs  auth.rs  client.rs  client_common.rs  codex.rs  codex_thread.rs  compact.rs  (+13 more)
codex-rs/docs/: CODEX_RS_COMPARISON.md  acp-compliance-plan.md  api-key-only-refactor.md  ascii-animation.md  linux.md  rename-plan.md  session-notes-plan.md  slash-copy-plan.md
codex-rs/exec/: Cargo.toml
codex-rs/tui/: Cargo.toml
(+282 files in other folders)
