[package]
name = "codex-code-nav"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_code_nav"
path = "src/lib.rs"

[[bin]]
name = "codex-code-nav"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-swift = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
